--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -1,17 +1,38 @@
 body {
+  background: #f1f1f1;
+  font-family: 'BlinkMacSystemFont', -apple-system, sans-serif;
   margin: 0;
 }
 
 .images {
+  align-items: center;
   display: flex;
   height: 100vh;
+  justify-content: center;
   overflow: hidden;
   width: 100vw;
-  align-items: center;
-  justify-content: center;
 }
 
 .images-image_container {
+  align-items: center;
+  background: #fff;
   box-shadow: 0 20px 40px rgba(0, 0 ,0, .3);
+  display: flex;
+  justify-content: center;
   margin: 0 4vw;
+}
+
+.images-image_container .controls {
+  position: absolute;
+}
+
+.controls-start {
+  background: none;
+  border: 0;
+  cursor: pointer;
+  font-size: 1rem;
+  outline: none;
+  padding: 1rem;
+  user-select: none;
+  -webkit-appearance: none;
 }
