--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -23,16 +23,20 @@ body {
 .images-image_container .controls {
   left: 50%;
   position: absolute;
+  top: calc(100% + 1rem);
   transform: translateX(-50%);
 }
 
 .controls-start {
-  background: none;
+  background: #aab3f1;
   border: 0;
+  border-radius: 5em;
   cursor: pointer;
   font-size: 1rem;
   outline: none;
-  padding: 1rem;
+  padding: 1rem 2rem;
   user-select: none;
   -webkit-appearance: none;
+
+  &:hover { background: #bfc7fb; }
 }
