remove the whitespace below the image

--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -18,6 +18,8 @@ body {
   box-shadow: 0 20px 40px rgba(0, 0 ,0, .2);
   margin: 0 4vw;
   position: relative;
+
+  img { display: block }
 }
 
 .images-image_container .controls {
