--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -38,3 +38,11 @@ body {
     box-shadow: 0 22px 42px rgba(0, 0 ,0, .25);
   }
 }
+
+.debug_area {
+  padding: 1rem;
+  position: absolute;
+  right: 0;
+  text-align: right;
+  top: 0;
+}
