--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -40,9 +40,16 @@ body {
 }
 
 .debug_area {
-  padding: 1rem;
   position: absolute;
   right: 0;
   text-align: right;
   top: 0;
+
+  button {
+    font-family: inherit;
+    font-size: 1rem;
+    padding: 1rem;
+  }
+
+  > * { margin: 1rem 1rem 0 0; }
 }
