display a correctly sized canvas
setting the collage size of the canvas to x results in an element like
this:

`<canvas height="x*2" width="x*2" style="width: x; height: x">...`

i'm not sure why the values are doubled, but it results in an offset
image which also messes up the canvas we read and send back to elm

this may have to do with retina

leaving the size of the canvas we send into collage at half the size
of the desired image outputs a canvas with the correct height/width
attributes (not editable via css) and incorrect css sizes — we then
take the incorrect css sizes and override them to fill their parent
(whose height and width is set via elm to the correct size)

--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -42,6 +42,11 @@ body {
   }
 }
 
+.images-image_container-force_size_fill * {
+  width: 100% !important;
+  height: 100% !important;
+}
+
 .images-image_container-peeking_number {
   color: #cccccc;
   font-feature-settings: "tnum";
