--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -17,30 +17,13 @@ body {
 .images-image_container {
   background: #fff;
   box-shadow: 0 20px 40px rgba(0, 0 ,0, .2);
+  height: 100px;
   margin: 0 2vw;
   position: relative;
   user-select: none;
+  width: 100px;
 
   img { display: block }
-}
-
-.images-image_container--hoverable {
-  cursor: zoom-in;
-  transition: transform .5s ease, box-shadow .5s ease;
-
-  &:hover {
-    transform: scale(1.25);
-    box-shadow: 0 25px 45px rgba(0, 0 ,0, .15);
-
-    .images-image_container-peeking_number {
-      transform: translateY(-.92em) scale(1);
-    }
-
-    .graph,
-    .images-image_container-overlay_text {
-      opacity: 0;
-    }
-  }
 }
 
 .images-image_container-force_size_fill * {
@@ -48,72 +31,60 @@ body {
   height: 100% !important;
 }
 
-.images-image_container-peeking_number {
-  color: #cccccc;
+.images-image_container-info_tray {
+  align-items: center;
+  background: #fff;
+  border-radius: 5em;
+  box-sizing: border-box;
+  color: #20a224;
+  display: flex;
   font-feature-settings: "tnum";
-  font-size: 1em;
+  font-size: 6px;
   font-weight: 900;
+  height: 20px;
+  justify-content: space-between;
+  left: 10%;
+  margin: 1em auto 0 auto;
+  overflow: hidden;
+  padding: 0 1em;
   position: absolute;
-  text-align: center;
-  top: 0;
-  transform: scale(.8);
-  transition: transform .5s ease;
-  width: 100%;
-  z-index: -1;
+  top: 100%;
+  width: 80%;
+  z-index: 1;
 }
 
-.images-image_container-overlay_text {
-  bottom: .5em;
-  color: rgba(white, .4);
-  font-feature-settings: "tnum";
-  font-size: 1em;
-  font-weight: 900;
-  position: absolute;
-  text-align: center;
-  transition: opacity .5s ease;
-  width: 100%;
+.images-image_container-info_tray--button {
+  background: #ff983f;
+  color: #fff;
+  cursor: pointer;
+  justify-content: center;
+
+  &:hover {
+    background: #ff9899;
+  }
+}
+
+.images-image_container-info_tray-number {
+  line-height: 1;
   z-index: 1;
 }
 
 .graph {
   height: 100%;
   left: 0;
-  overflow: hidden;
   position: absolute;
-  top: 0;
+  top: 100%;
   transition: opacity .5s ease;
   width: 100%;
-  z-index: 1;
-}
-
-.graph-bar_container {
   align-items: flex-end;
   display: flex;
-  height: 40%;
-  position: relative;
-  top: 100%;
 }
 
 .graph-bar {
-  background: rgba(255, 255, 255, .5);
-  border-radius: 1em 1em 0 0;
+  background: #d5d5d5;
+  border-radius: 100em 100em 0 0;
   flex: 1;
   height: 100%;
   position: relative;
-
-  &:nth-child(8) {
-    transition: transform .1s ease;
-  }
-
-  &:nth-child(9) {
-    transition: transform .2s ease;
-  }
-
-  &:nth-child(10) {
-    transition: transform .3s ease;
-  }
-
-  &:nth-child(even) {
-    background: rgba(255, 255, 255, .35);
-  }
+  transition: transform .5s ease;
 }
