--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -37,6 +37,7 @@ body {
   border-radius: 5em;
   box-sizing: border-box;
   color: #20a224;
+  cursor: default;
   display: flex;
   font-feature-settings: "tnum";
   font-size: 6px;
@@ -49,6 +50,7 @@ body {
   padding: 0 1em;
   position: absolute;
   top: 100%;
+  user-select: none;
   width: 80%;
   z-index: 1;
 }
@@ -86,5 +88,5 @@ body {
   flex: 1;
   height: 100%;
   position: relative;
-  transition: transform .5s ease;
+  transition: transform .2s ease;
 }
